# nifty-blackbox

./: .gitignore  ASSESSMENT_REPORT.md  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py  smoke_test.py
backend/adapters/: questdb_adapter.py
backend/ml/: data_loader.py  ensemble_predictor.py  feature_engineering.py  labels.py  multi_horizon_predictor.py  run_pipeline.py  training_pipeline.py
backend/models/training_logs/: metrics_banknifty_15m_20260302_150255.json  metrics_banknifty_15m_20260317_005543.json  metrics_banknifty_5m_20260302_150225.json  metrics_banknifty_5m_20260317_005602.json  metrics_nifty_15m_20260212_125058.json  metrics_nifty_15m_20260317_005520.json  metrics_nifty_1h_20260212_125121.json  metrics_nifty_5m_20260206_144746.json  metrics_nifty_5m_20260209_235829.json  (+5 more)
backend/routers/: candles.py  health.py  research.py
backend/services/: meta_filter_service.py
backend/training/: train_multihorizon.py  validate_multihorizon.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
research/: 01_expectancy_analysis.py  02_friction_analysis.py  03_feature_fragility.py  04_regime_analysis.py  05_vectorbt_backtest.py  06_factor_ic.py  07_leverage_sweep.py  07_streak_decomposition.py  08_regime_diagnosis.py  09_label_redesign_comparison.py  README.md  core_execution.py
scripts/: analyze_movement_performance.py  generate_performance_visualizations.py  train_foundation_models.py  train_meta_filter.py  validate_ensemble.py  validate_meta_filter_2025.py
(+6 files in other folders)
